# real-time-chat

chat/: alembic.ini  pyproject.toml
chat/alembic/: env.py
chat/alembic/versions/: 59ac65438a1a_user_model.py  d60fbaec9f57_user_model.py  f8a3da95933b_user_model.py
chat/chat/: auth.py  db.py  main.py  models.py  schemas.py  websocet.html  ws.py
