[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["saamo24 <sabrahamyan.004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
fastapi-jwt-auth = "^0.5.0"
pydantic = "1.*"
psycopg2-binary = "^2.9.10"
bcrypt = "^4.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
